jtools/grammar/JQLParser.py
# Generated from jtools/grammar/JQL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JQLParser ( Parser ):

    grammarFileName = "JQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'+'", "'_'", "<INVALID>", "'('", 
                     "')'", "'.'", "'['", "']'", "','", "'{'", "'}'", "':'", 
                     "'@'", "'$'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PRIMITIVE", "LPAREN", "RPAREN", "DOT", "LBRACKET", 
                      "RBRACKET", "COMMA", "LBRACE", "RBRACE", "SEMI", "AT", 
                      "DOLLAR", "DIGITS", "LETTERS", "STRING", "SPACE", 
                      "WS", "IDENTIFIER", "LAST" ]

    RULE_jql_multi_query = 0
    RULE_jql_query = 1
    RULE_query = 2
    RULE_raw_text = 3
    RULE_query_part = 4
    RULE_query_field = 5
    RULE_special = 6
    RULE_special_name = 7
    RULE_arguments = 8
    RULE_value = 9
    RULE_list_value = 10
    RULE_set_value = 11
    RULE_object_value = 12
    RULE_pair = 13
    RULE_key = 14
    RULE_number = 15
    RULE_name = 16

    ruleNames =  [ "jql_multi_query", "jql_query", "query", "raw_text", 
                   "query_part", "query_field", "special", "special_name", 
                   "arguments", "value", "list_value", "set_value", "object_value", 
                   "pair", "key", "number", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    PRIMITIVE=4
    LPAREN=5
    RPAREN=6
    DOT=7
    LBRACKET=8
    RBRACKET=9
    COMMA=10
    LBRACE=11
    RBRACE=12
    SEMI=13
    AT=14
    DOLLAR=15
    DIGITS=16
    LETTERS=17
    STRING=18
    SPACE=19
    WS=20
    IDENTIFIER=21
    LAST=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Jql_multi_queryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.AT)
            else:
                return self.getToken(JQLParser.AT, i)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.QueryContext)
            else:
                return self.getTypedRuleContext(JQLParser.QueryContext,i)


        def raw_text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.Raw_textContext)
            else:
                return self.getTypedRuleContext(JQLParser.Raw_textContext,i)


        def getRuleIndex(self):
            return JQLParser.RULE_jql_multi_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJql_multi_query" ):
                listener.enterJql_multi_query(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJql_multi_query" ):
                listener.exitJql_multi_query(self)




    def jql_multi_query(self):

        localctx = JQLParser.Jql_multi_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_jql_multi_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JQLParser.T__0) | (1 << JQLParser.T__1) | (1 << JQLParser.T__2) | (1 << JQLParser.PRIMITIVE) | (1 << JQLParser.LPAREN) | (1 << JQLParser.RPAREN) | (1 << JQLParser.DOT) | (1 << JQLParser.LBRACKET) | (1 << JQLParser.RBRACKET) | (1 << JQLParser.COMMA) | (1 << JQLParser.LBRACE) | (1 << JQLParser.RBRACE) | (1 << JQLParser.SEMI) | (1 << JQLParser.AT) | (1 << JQLParser.DOLLAR) | (1 << JQLParser.DIGITS) | (1 << JQLParser.LETTERS) | (1 << JQLParser.STRING) | (1 << JQLParser.SPACE) | (1 << JQLParser.WS) | (1 << JQLParser.IDENTIFIER) | (1 << JQLParser.LAST))) != 0):
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.match(JQLParser.AT)
                    self.state = 35
                    self.query()
                    pass

                elif la_ == 2:
                    self.state = 36
                    self.raw_text()
                    pass


                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Jql_queryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JQLParser.EOF, 0)

        def query(self):
            return self.getTypedRuleContext(JQLParser.QueryContext,0)


        def getRuleIndex(self):
            return JQLParser.RULE_jql_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJql_query" ):
                listener.enterJql_query(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJql_query" ):
                listener.exitJql_query(self)




    def jql_query(self):

        localctx = JQLParser.Jql_queryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_jql_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JQLParser.T__0) | (1 << JQLParser.T__2) | (1 << JQLParser.PRIMITIVE) | (1 << JQLParser.LBRACKET) | (1 << JQLParser.RBRACKET) | (1 << JQLParser.LBRACE) | (1 << JQLParser.RBRACE) | (1 << JQLParser.SEMI) | (1 << JQLParser.DOLLAR) | (1 << JQLParser.DIGITS) | (1 << JQLParser.LETTERS) | (1 << JQLParser.IDENTIFIER))) != 0):
                self.state = 42
                self.query()


            self.state = 45
            self.match(JQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.Query_partContext)
            else:
                return self.getTypedRuleContext(JQLParser.Query_partContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.DOT)
            else:
                return self.getToken(JQLParser.DOT, i)

        def getRuleIndex(self):
            return JQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = JQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.query_part()
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.match(JQLParser.DOT)
                    self.state = 49
                    self.query_part() 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Raw_textContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.AT)
            else:
                return self.getToken(JQLParser.AT, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.WS)
            else:
                return self.getToken(JQLParser.WS, i)

        def getRuleIndex(self):
            return JQLParser.RULE_raw_text

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRaw_text" ):
                listener.enterRaw_text(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRaw_text" ):
                listener.exitRaw_text(self)




    def raw_text(self):

        localctx = JQLParser.Raw_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_raw_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 63
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        self.state = 56 
                        self._errHandler.sync(self)
                        _alt = 1
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt == 1:
                                self.state = 55
                                self.match(JQLParser.WS)

                            else:
                                raise NoViableAltException(self)
                            self.state = 58 
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                        pass

                    elif la_ == 2:
                        self.state = 60
                        self.match(JQLParser.AT)
                        self.state = 61
                        self.match(JQLParser.AT)
                        pass

                    elif la_ == 3:
                        self.state = 62
                        _la = self._input.LA(1)
                        if _la <= 0 or _la==JQLParser.AT:
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 65 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_field(self):
            return self.getTypedRuleContext(JQLParser.Query_fieldContext,0)


        def special(self):
            return self.getTypedRuleContext(JQLParser.SpecialContext,0)


        def getRuleIndex(self):
            return JQLParser.RULE_query_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_part" ):
                listener.enterQuery_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_part" ):
                listener.exitQuery_part(self)




    def query_part(self):

        localctx = JQLParser.Query_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_query_part)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JQLParser.T__0, JQLParser.T__2, JQLParser.PRIMITIVE, JQLParser.LBRACKET, JQLParser.RBRACKET, JQLParser.LBRACE, JQLParser.RBRACE, JQLParser.SEMI, JQLParser.DIGITS, JQLParser.LETTERS, JQLParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.query_field()
                pass
            elif token in [JQLParser.DOLLAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.special()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_fieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(JQLParser.NameContext,0)


        def getRuleIndex(self):
            return JQLParser.RULE_query_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_field" ):
                listener.enterQuery_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_field" ):
                listener.exitQuery_field(self)




    def query_field(self):

        localctx = JQLParser.Query_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_query_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLAR(self):
            return self.getToken(JQLParser.DOLLAR, 0)

        def special_name(self):
            return self.getTypedRuleContext(JQLParser.Special_nameContext,0)


        def arguments(self):
            return self.getTypedRuleContext(JQLParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return JQLParser.RULE_special

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial" ):
                listener.enterSpecial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial" ):
                listener.exitSpecial(self)




    def special(self):

        localctx = JQLParser.SpecialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_special)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(JQLParser.DOLLAR)
            self.state = 74
            self.special_name()
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 75
                self.arguments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Special_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(JQLParser.NameContext,0)


        def getRuleIndex(self):
            return JQLParser.RULE_special_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial_name" ):
                listener.enterSpecial_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial_name" ):
                listener.exitSpecial_name(self)




    def special_name(self):

        localctx = JQLParser.Special_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_special_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(JQLParser.LPAREN, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(JQLParser.ValueContext,i)


        def RPAREN(self):
            return self.getToken(JQLParser.RPAREN, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.SPACE)
            else:
                return self.getToken(JQLParser.SPACE, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.COMMA)
            else:
                return self.getToken(JQLParser.COMMA, i)

        def getRuleIndex(self):
            return JQLParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = JQLParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(JQLParser.LPAREN)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 81
                    self.match(JQLParser.SPACE)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 87
                self.value()
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 91
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 88
                            self.match(JQLParser.SPACE)
                            self.state = 93
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 94
                        self.match(JQLParser.COMMA)
                        self.state = 98
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 95
                            self.match(JQLParser.SPACE)
                            self.state = 100
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 101
                        self.value() 
                    self.state = 106
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 107
                    self.match(JQLParser.SPACE)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self.match(JQLParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(JQLParser.LPAREN)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 116
                    self.match(JQLParser.SPACE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 122
                self.match(JQLParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(JQLParser.AT, 0)

        def query(self):
            return self.getTypedRuleContext(JQLParser.QueryContext,0)


        def list_value(self):
            return self.getTypedRuleContext(JQLParser.List_valueContext,0)


        def set_value(self):
            return self.getTypedRuleContext(JQLParser.Set_valueContext,0)


        def object_value(self):
            return self.getTypedRuleContext(JQLParser.Object_valueContext,0)


        def number(self):
            return self.getTypedRuleContext(JQLParser.NumberContext,0)


        def STRING(self):
            return self.getToken(JQLParser.STRING, 0)

        def PRIMITIVE(self):
            return self.getToken(JQLParser.PRIMITIVE, 0)

        def getRuleIndex(self):
            return JQLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = JQLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(JQLParser.AT)
                self.state = 126
                self.query()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.list_value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.set_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.object_value()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.number()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.match(JQLParser.STRING)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.match(JQLParser.PRIMITIVE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(JQLParser.LBRACKET, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(JQLParser.ValueContext,i)


        def RBRACKET(self):
            return self.getToken(JQLParser.RBRACKET, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.SPACE)
            else:
                return self.getToken(JQLParser.SPACE, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.COMMA)
            else:
                return self.getToken(JQLParser.COMMA, i)

        def getRuleIndex(self):
            return JQLParser.RULE_list_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_value" ):
                listener.enterList_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_value" ):
                listener.exitList_value(self)




    def list_value(self):

        localctx = JQLParser.List_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_list_value)
        self._la = 0 # Token type
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(JQLParser.LBRACKET)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 136
                    self.match(JQLParser.SPACE)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 142
                self.value()
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 146
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 143
                            self.match(JQLParser.SPACE)
                            self.state = 148
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 149
                        self.match(JQLParser.COMMA)
                        self.state = 153
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 150
                            self.match(JQLParser.SPACE)
                            self.state = 155
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 156
                        self.value() 
                    self.state = 161
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 162
                    self.match(JQLParser.SPACE)
                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 168
                self.match(JQLParser.RBRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(JQLParser.LBRACKET)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 171
                    self.match(JQLParser.SPACE)
                    self.state = 176
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 177
                self.match(JQLParser.RBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JQLParser.LBRACE, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.ValueContext)
            else:
                return self.getTypedRuleContext(JQLParser.ValueContext,i)


        def RBRACE(self):
            return self.getToken(JQLParser.RBRACE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.SPACE)
            else:
                return self.getToken(JQLParser.SPACE, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.COMMA)
            else:
                return self.getToken(JQLParser.COMMA, i)

        def getRuleIndex(self):
            return JQLParser.RULE_set_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_value" ):
                listener.enterSet_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_value" ):
                listener.exitSet_value(self)




    def set_value(self):

        localctx = JQLParser.Set_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_set_value)
        self._la = 0 # Token type
        try:
            self.state = 223
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,30,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(JQLParser.LBRACE)
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 181
                    self.match(JQLParser.SPACE)
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 187
                self.value()
                self.state = 204
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,27,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 191
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 188
                            self.match(JQLParser.SPACE)
                            self.state = 193
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 194
                        self.match(JQLParser.COMMA)
                        self.state = 198
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==JQLParser.SPACE:
                            self.state = 195
                            self.match(JQLParser.SPACE)
                            self.state = 200
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 201
                        self.value() 
                    self.state = 206
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,27,self._ctx)

                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 207
                    self.match(JQLParser.SPACE)
                    self.state = 212
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 213
                self.match(JQLParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 215
                self.match(JQLParser.LBRACE)
                self.state = 219
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JQLParser.SPACE:
                    self.state = 216
                    self.match(JQLParser.SPACE)
                    self.state = 221
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 222
                self.match(JQLParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Object_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JQLParser.LBRACE, 0)

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JQLParser.PairContext)
            else:
                return self.getTypedRuleContext(JQLParser.PairContext,i)


        def RBRACE(self):
            return self.getToken(JQLParser.RBRACE, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(JQLParser.SPACE)
            else:
                return self.getToken(JQLParser.SPACE, i)
